sgd/reproduction/playground/objects/SVMXC__Quote__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>In ServiceMax, Quote contains the estimated cost of a service event to be presented to a customer to get approval. A quote can be either created manually or generated automatically from the estimate lines of a service order.</description>
    <fields>
        <fullName>SMAX_PS_Applier_Name__c</fullName>
        <label>見積申請者氏名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Applier__c</fullName>
        <label>見積承認申請者メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approval_DateTime__c</fullName>
        <label>承認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approver_Local_Name__c</fullName>
        <formula>SMAX_PS_Approver__r.SMAX_PS_Local_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Local Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approver_Loggd_In__c</fullName>
        <formula>IF( $User.Id =  SMAX_PS_Approver__r.Id, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>承認者ログイン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>承認者</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.SMAX_PS_ApproverFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ケース</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>コピー元</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Service Quotes (Cloned From)</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Company_Fax__c</fullName>
        <formula>SVMXC__Company__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>提出先FAX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Company_Tel__c</fullName>
        <formula>SVMXC__Company__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>提出先TEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Dept__c</fullName>
        <formula>SVMXC__Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>提出先担当者部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Cond_Special__c</fullName>
        <label>引渡条件（特殊）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Condition__c</fullName>
        <label>引渡条件</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>サービス報告書のサインをもってお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>作業報告書の発送をもってお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>部品納品にてお引渡しと致します</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>製品納入にてお引渡しと致します</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>特殊</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Delivery_Location__c</fullName>
        <label>引渡場所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_IP_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：明細表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_IP_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：総合計有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_Parts_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：部品金額表示有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_Parts_List__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：部品表表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Display_Parts_Spec__c</fullName>
        <defaultValue>true</defaultValue>
        <label>帳票：部品仕様表示有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>エンドユーザ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Quotes (エンドユーザ)</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Address__c</fullName>
        <formula>SMAX_PS_End_User_Account__r.BillingPostalCode + &quot; &quot; +
SMAX_PS_End_User_Account__r.BillingState + 
SMAX_PS_End_User_Account__r.BillingCity + 
SMAX_PS_End_User_Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザ住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Cont_Dept__c</fullName>
        <formula>SMAX_PS_End_User_Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザ担当者部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>エンドユーザ担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Quotes (エンドユーザ担当者)</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Fax__c</fullName>
        <formula>SVMXC__Company__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザFAX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_User_Tel__c</fullName>
        <formula>SMAX_PS_End_User_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザTEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Percent__c</fullName>
        <label>諸経費パーセント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Expense_Percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Contact__c</fullName>
        <label>HOR - 担当者名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Date__c</fullName>
        <label>HOR - 日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_Number__c</fullName>
        <label>HOR - 号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HOR_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOR - 営業所</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service Quotes (HOR - 営業所)</relationshipLabel>
        <relationshipName>Service_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Internal_Memo__c</fullName>
        <label>社内メモ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OutPut_Type__c</fullName>
        <label>帳票様式（HTS/HOR）</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_OutPutType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Owner_Local_Name__c</fullName>
        <formula>Owner:User.SMAX_PS_Local_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Local Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部品価格表</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payment_Terms__c</fullName>
        <label>支払条件</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Publish_Date__c</fullName>
        <label>発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Total__c</fullName>
        <label>見積総額</label>
        <summarizedField>SMAX_PS_Service_Quote_IP_Line__c.SMAX_PS_Tech_Total__c</summarizedField>
        <summaryForeignKey>SMAX_PS_Service_Quote_IP_Line__c.SMAX_PS_Service_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remarks__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Report_Name__c</fullName>
        <formula>LEFT(SUBSTITUTE(SUBSTITUTE(TEXT(TODAY()) +TEXT(TIMENOW()), &apos;-&apos;, &apos;&apos;), &apos;:&apos;,&apos;&apos;), 14)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>営業Gr.</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice_OLD__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_ComplaintJudge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrg__c</fullName>
        <label>販売組織</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス価格表</label>
        <referenceTo>SVMXC__Service_Pricebook__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Station</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>設置場所</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Subject__c</fullName>
        <label>件名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax_Rate__c</fullName>
        <label>帳票：税込み・税抜き</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>税抜き</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>税込み（10%）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax__c</fullName>
        <formula>IF(  ISPICKVAL(SMAX_PS_Tax_Rate__c, &apos;0&apos;),0 ,  SMAX_PS_Quote_Total__c  / 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>税金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Valid_Up_To__c</fullName>
        <label>納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer account for whom the quote is prepared. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer account for whom the quote is prepared. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer contact for whom the quote is prepared. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Customer contact for whom the quote is prepared. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discount_Type__c</fullName>
        <description>Indicates if the discount is entered as an amount or percentage of total price</description>
        <inlineHelpText>Select Discount Type</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>To capture discount percentage or amount based on selected Discount Type</description>
        <inlineHelpText>To capture discount percentage or amount based on selected Discount Type</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quote_Amount2__c</fullName>
        <description>Total amount of the quote after discount</description>
        <inlineHelpText>Total amount of the quote after discount</inlineHelpText>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Revised_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original quote number which was revised to create this quote. Is a lookup to an existing quote in ServiceMax</description>
        <inlineHelpText>The original quote number which was revised to create this quote. Is a lookup to an existing quote in ServiceMax</inlineHelpText>
        <label>Revised From</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SESSION_ID__c</fullName>
        <description>Not used</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESSION_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service order number for which this quote is created. Is a lookup to an existing service order record in ServiceMax</description>
        <inlineHelpText>Service order number for which this quote is created. Is a lookup to an existing service order record in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of the quote</description>
        <inlineHelpText>Current status of the quote</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>RequestApproval</fullName>
                    <label>Request Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Line_Price2__c</fullName>
        <description>Sum of Line Price for all the lines</description>
        <inlineHelpText>Sum of Line Price for all the lines</inlineHelpText>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Valid_Until__c</fullName>
        <description>Date until which the quote is valid</description>
        <inlineHelpText>Date until which the quote is valid</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Company__c</fullName>
        <label>Test Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>HOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quote_Line_Price__c</fullName>
        <label>Total Quote Line Price(Do Not use)</label>
        <summarizedField>SMAX_PS_Quote_Lines__c.SMAX_PS_Line_Price2__c</summarizedField>
        <summaryForeignKey>SMAX_PS_Quote_Lines__c.SMAX_PS_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_entry__c</fullName>
        <label>test-entry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test1</fullName>
                </value>
                <value>
                    <fullName>test2</fullName>
                </value>
                <value>
                    <fullName>test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Quote</label>
    <listViews>
        <fullName>SVMXC__All_Service_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SMAX_PS_End_User_Account__c</columns>
        <columns>SMAX_PS_Subject__c</columns>
        <columns>SVMXC__Status__c</columns>
        <columns>SMAX_PS_Service_Team__c</columns>
        <columns>SMAX_PS_Segment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Quotes</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Check_Delivery_Condition</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 AND(
  ISPICKVAL(SMAX_PS_Delivery_Condition__c, &quot;9999&quot;),
  ISBLANK(SMAX_PS_Delivery_Cond_Special__c)
 ), 
true, false)</errorConditionFormula>
        <errorMessage>引き渡し条件（特殊）を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_Delivery_Condition2</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 AND(
  NOT(ISPICKVAL(SMAX_PS_Delivery_Condition__c, &quot;9999&quot;)),
  NOT(ISBLANK(SMAX_PS_Delivery_Cond_Special__c))
 ), 
true, false)</errorConditionFormula>
        <errorMessage>特殊の場合のみ引き渡し条件（特殊）を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_Display_Contents</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( SMAX_PS_Display_Parts_List__c = false,  SMAX_PS_Display_IP_Details__c = false), true, false)</errorConditionFormula>
        <errorMessage>【帳票：明細表示】もしくは【帳票：部品表表示】を設定してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_HOR_SO</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(SMAX_PS_OutPut_Type__c, &apos;HOR&apos;),  SMAX_PS_HOR_SO__c = null), true, false)</errorConditionFormula>
        <errorMessage>HOR - 営業所を入力してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_Payment_Terms</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(SVMXC__Status__c, &apos;RequestApproval&apos;),
 OR(
  ISBLANK(SMAX_PS_Payment_Terms__c),
  ISNULL(SMAX_PS_Payment_Terms__c)
 )
)</errorConditionFormula>
        <errorMessage>HTS支払条件を設定ください。</errorMessage>
    </validationRules>
</CustomObject>